changed build target dir

--- a/.github/workflows/full-site-build.yml
+++ b/.github/workflows/full-site-build.yml
@@ -20,22 +20,22 @@ jobs:
       - name: clear space
         run: |
           cd /home/ubuntu 
-          [ -d DBRDocJS ] && rm -rf DBRDocJS 
+          [ -d DBRDocJS-Full ] && rm -rf DBRDocJS-Full 
           [ -d barcode-reader-docs-js ] && rm -rf barcode-reader-docs-js
           [ -d Docs-Template-Repo-preview ] && rm -rf Docs-Template-Repo-preview
 
       - name: Build the full site (no incremental)
         run: |
           cd /home/ubuntu
-          mkdir -p DBRDocJS
+          mkdir -p DBRDocJS-Full
           [ ! -d barcode-reader-docs-js ] && git clone --depth 1 https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js
           [ ! -d Docs-Template-Repo-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-preview
-          cd barcode-reader-docs-js && git pull && cd .. && cp -rfp ./barcode-reader-docs-js/* ./DBRDocJS/
-          cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DBRDocJS/
+          cd barcode-reader-docs-js && git pull && cd .. && cp -rfp ./barcode-reader-docs-js/* ./DBRDocJS-Full/
+          cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DBRDocJS-Full/
           sed -i -e "1,3s/blob\/master$/blob\/preview/" \
-          -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS/_config.yml
-          cd DBRDocJS && bundle exec jekyll build
-          python3 /home/ubuntu/ftp.py /home/ubuntu/DBRDocJS/_site/ ./www.dynamsoft.com/barcode-reader/docs/web/ prod
+          -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS-Full/_config.yml
+          cd DBRDocJS-Full && bundle exec jekyll build
+          python3 /home/ubuntu/ftp.py /home/ubuntu/DBRDocJS-Full/_site/ ./www.dynamsoft.com/barcode-reader/docs/web/ prod
          
   Build-Preview:
     if: ${{ github.ref == 'refs/heads/preview' }}
@@ -47,23 +47,23 @@ jobs:
       - name: clear space
         run: |
           cd /home/ubuntu 
-          [ -d DBRDocJS-preview ] && rm -rf DBRDocJS-preview 
+          [ -d DBRDocJS-Full-preview ] && rm -rf DBRDocJS-Full-preview 
           [ -d barcode-reader-docs-js-preview ] && rm -rf barcode-reader-docs-js-preview
           [ -d Docs-Template-Repo-preview ] && rm -rf Docs-Template-Repo-preview
           cd /home/ubuntu
 
-      - name: Build the site
+      - name: Build the full site (no incremental) - preview
         run: |
           cd /home/ubuntu
-          mkdir -p DBRDocJS-preview
+          mkdir -p DBRDocJS-Full-preview
           [ ! -d barcode-reader-docs-js-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js-preview
           [ ! -d Docs-Template-Repo-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-preview
-          cd barcode-reader-docs-js-preview && git pull && cd .. && cp -rfp ./barcode-reader-docs-js-preview/* ./DBRDocJS-preview/
-          cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DBRDocJS-preview/
+          cd barcode-reader-docs-js-preview && git pull && cd .. && cp -rfp ./barcode-reader-docs-js-preview/* ./DBRDocJS-Full-preview/
+          cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DBRDocJS-Full-preview/
           sed -i -e "1,3s/blob\/master$/blob\/preview/" \
-          -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS-preview/_config.yml
-          cd DBRDocJS-preview && bundle exec jekyll build
-          
+          -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS-Full-preview/_config.yml
+          cd DBRDocJS-Full-preview && bundle exec jekyll build
+
       - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
         with:
@@ -71,5 +71,5 @@ jobs:
           username: ${{ secrets.FTP_TEST_SITE_USER }}
           password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
           port: 7500 
-          local-dir: /home/ubuntu/DBRDocJS-preview/_site/
+          local-dir: /home/ubuntu/DBRDocJS-Full-preview/_site/
           server-dir: /www.dynamsoft.com/barcode-reader/docs/web/          
