--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,50 @@
-name: CI
+# This is a basic workflow to help you get started with Actions
+
+name: CI DBR JS
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push events but only for the master branch
   push:
     branches: 
     - main 
     - preview 
     - reviewing
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains jobs called "Build-Main" and "Build-Preview"
   Build-Main:
     if: ${{ github.ref == 'refs/heads/main' }}
+    # The type of runner that the job will run on
     runs-on: self-hosted
- steps:
-      - name: clear space
-        run: |
-          cd /home/ubuntu 
-          [ -d DBRDocJS ] && rm -rf DBRDocJS 
-          [ -d barcode-reader-docs-js ] && rm -rf barcode-reader-docs-js
-          [ -d Docs-Template-Repo-preview ] && rm -rf Docs-Template-Repo-preview
-          cd /home/ubuntu
 
-      - name: Build the site
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      #- uses: actions/checkout@v2
+
+      # Runs a set of commands using the runners shell
+      - name: Build main
         run: |
           cd /home/ubuntu
-          mkdir -p DBRDocJS
-          [ ! -d barcode-reader-docs-js ] && git clone --depth 1 https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js
-          [ ! -d Docs-Template-Repo-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-preview
-          cd barcode-reader-docs-js && git pull && cd .. && cp -rfp ./barcode-reader-docs-js/* ./DBRDocJS/
-          cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DBRDocJS/
-          sed -i -e "1,3s/blob\/master$/blob\/preview/" \
-          -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS/_config.yml
-          cd DBRDocJS && bundle exec jekyll build --incremental && cd ..
-          python3 /home/ubuntu/ftp.py /home/ubuntu/DBRDocJS/_site/ ./www.dynamsoft.com/barcode-reader/docs/web/ prod
+          [ ! -d DBRDoc ] && mkdir -p DBRDoc
+          cd barcode-reader-docs && git pull && cd .. && cp -rfp ./barcode-reader-docs/* ./DBRDoc/
+          cd barcode-reader-docs-js && git pull && cd .. && cp -rfp ./barcode-reader-docs-js/* ./DBRDoc/
+          cd barcode-reader-docs-mobile && git pull && cd .. && cp -rfp ./barcode-reader-docs-mobile/* ./DBRDoc/
+          cd Docs-Template-Repo && git pull && cd .. && cp -rfp ./Docs-Template-Repo/* ./DBRDoc/
+          cd DBRDoc && bundle exec jekyll build --incremental
+          python3 /home/ubuntu/ftp.py /home/ubuntu/DBRDoc/_site/ ./www.dynamsoft.com/barcode-reader/ prod
 
   Build-Preview:
     if: ${{ github.ref == 'refs/heads/preview' }}
+    # The type of runner that the job will run on
     runs-on: self-hosted
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: clear space
         run: |
@@ -42,9 +52,8 @@ jobs:
           [ -d DBRDocJS-preview ] && rm -rf DBRDocJS-preview 
           [ -d barcode-reader-docs-js-preview ] && rm -rf barcode-reader-docs-js-preview
           [ -d Docs-Template-Repo-preview ] && rm -rf Docs-Template-Repo-preview
-          cd /home/ubuntu
-
-      - name: Build the site
+      # Runs a set of commands using the runners shell
+      - name: Build the site - Preview
         run: |
           cd /home/ubuntu
           mkdir -p DBRDocJS-preview
@@ -54,7 +63,7 @@ jobs:
           cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DBRDocJS-preview/
           sed -i -e "1,3s/blob\/master$/blob\/preview/" \
           -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS-preview/_config.yml
-          cd DBRDocJS-preview && bundle exec jekyll build --incremental && cd ..
+          cd DBRDocJS-preview && bundle exec jekyll build --incremental
 
       - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
@@ -64,18 +73,21 @@ jobs:
           password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
           port: 7500 
           local-dir: /home/ubuntu/DBRDocJS-preview/_site/
-          server-dir: /www.dynamsoft.com/barcode-reader/docs/web/          
-
-
+          server-dir: /www.dynamsoft.com/barcode-reader/docs/web/        
+          
   Build-Review:
     if: ${{ github.ref == 'refs/heads/reviewing' }}
+    # The type of runner that the job will run on
     runs-on: self-hosted
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Runs a set of commands using the runners shell
       - name: clear space
         run: |
           cd /home/ubuntu 
           [ -d DBRDocRestructuredJS ] && rm -rf DBRDocRestructuredJS 
-          [ -d barcode-reader-docs-js-reviewing ] && rm -rf barcode-reader-docs-js-reviewing
+          [ -d barcode-reader-docs-JS-reviewing ] && rm -rf barcode-reader-docs-JS-reviewing
           [ -d Docs-Template-Repo-preview ] && rm -rf Docs-Template-Repo-preview
           cd /home/ubuntu
 
@@ -83,9 +95,9 @@ jobs:
         run: |
           cd /home/ubuntu
           mkdir -p DBRDocRestructuredJS
-          [ ! -d barcode-reader-docs-js-reviewing ] && git clone --depth 1 --branch reviewing https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js-reviewing
+          [ ! -d barcode-reader-docs-JS-reviewing ] && git clone --depth 1 --branch reviewing https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-JS-reviewing
           [ ! -d Docs-Template-Repo-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-preview
-          cd barcode-reader-docs-js-reviewing && git pull && cd .. && cp -rfp ./barcode-reader-docs-js-reviewing/* ./DBRDocRestructuredJS/
+          cd barcode-reader-docs-JS-reviewing && git pull && cd .. && cp -rfp ./barcode-reader-docs-JS-reviewing/* ./DBRDocRestructuredJS/
           cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DBRDocRestructuredJS/
           sed -i -e "1,3s/blob\/master$/blob\/reviewing/" \
           -e "1,3s/blob\/main$/blob\/reviewing/" /home/ubuntu/DBRDocRestructuredJS/_config.yml
@@ -99,5 +111,5 @@ jobs:
           password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
           port: 7500 
           local-dir: /home/ubuntu/DBRDocRestructuredJS/_site/
-          server-dir: /www.dynamsoft.com/barcode-reader/docs/web/
+          server-dir: /www.dynamsoft.com/barcode-reader-review/docs/web/
           
