--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,20 +24,25 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      #- uses: actions/checkout@v2
-
+      - name: clear space
+        run: |
+          cd /home/ubuntu 
+          [ -d DBRDocJS ] && rm -rf DBRDocJS 
+          [ -d barcode-reader-docs-js ] && rm -rf barcode-reader-docs-js
+          [ -d Docs-Template-Repo-preview ] && rm -rf Docs-Template-Repo-preview
       # Runs a set of commands using the runners shell
-      - name: Build main
+      - name: Build the site - Main
         run: |
           cd /home/ubuntu
-          [ ! -d DBRDoc ] && mkdir -p DBRDoc
-          cd barcode-reader-docs && git pull && cd .. && cp -rfp ./barcode-reader-docs/* ./DBRDoc/
-          cd barcode-reader-docs-js && git pull && cd .. && cp -rfp ./barcode-reader-docs-js/* ./DBRDoc/
-          cd barcode-reader-docs-mobile && git pull && cd .. && cp -rfp ./barcode-reader-docs-mobile/* ./DBRDoc/
-          cd Docs-Template-Repo && git pull && cd .. && cp -rfp ./Docs-Template-Repo/* ./DBRDoc/
-          cd DBRDoc && bundle exec jekyll build --incremental
-          python3 /home/ubuntu/ftp.py /home/ubuntu/DBRDoc/_site/ ./www.dynamsoft.com/barcode-reader/ prod
+          mkdir -p DBRDocJS
+          [ ! -d barcode-reader-docs-js ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js
+          [ ! -d Docs-Template-Repo-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-preview
+          cd barcode-reader-docs-js && git pull && cd .. && cp -rfp ./barcode-reader-docs-js/* ./DBRDocJS/
+          cd Docs-Template-Repo-preview && git pull && cd .. && cp -rfp ./Docs-Template-Repo-preview/* ./DBRDocJS/
+          sed -i -e "1,3s/blob\/master$/blob\/preview/" \
+          -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS/_config.yml
+          cd DBRDocJS && bundle exec jekyll build --incremental
+          python3 /home/ubuntu/ftp.py /home/ubuntu/DBRDocJS/_site/ ./www.dynamsoft.com/barcode-reader/docs/web/ prod
 
   Build-Preview:
     if: ${{ github.ref == 'refs/heads/preview' }}
