--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-repositoryUrl: https://github.com/dynamsoft-docs/barcode-reader-docs-js/blob/main
+repositoryUrlJS: https://github.com/dynamsoft-docs/barcode-reader-docs-js/blob/main
 repository: dynamsoft-docs/barcode-reader-docs-js
 docFullPath: https://www.dynamsoft.com/barcode-reader/docs/web/
 firstLevelUrl: /barcode-reader/docs/web
