--- a/Web.Config
+++ b/Web.Config
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" path="error.html" responseMode="File" />
+    </httpErrors>
     <rewrite>
       <rules>
         <rule name="Redirect-old-page1" enabled="true" stopProcessing="true">
@@ -79,7 +83,6 @@
           <match url="global-interfaces.html" ignoreCase="true" />
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/index.html" redirectType="Permanent" />
         </rule>
-        <action type="Redirect" url="" redirectType="Permanent" />
       </rules>
     </rewrite>
   </system.webServer>
