--- a/Web.Config
+++ b/Web.Config
@@ -12,6 +12,10 @@
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page2" enabled="true" stopProcessing="true">
+          <match url="BarcodeReader/methods/?ver=latest" ignoreCase="true" />
+          <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
+        </rule>
+        <rule name="Redirect-old-page2_1" enabled="true" stopProcessing="true">
           <match url="BarcodeReader/methods/index.html" ignoreCase="true" />
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
         </rule>
@@ -32,6 +36,10 @@
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page7" enabled="true" stopProcessing="true">
+          <match url="BarcodeReader/?ver=latest" ignoreCase="true" />
+          <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
+        </rule>
+        <rule name="Redirect-old-page7_1" enabled="true" stopProcessing="true">
           <match url="BarcodeReader/index.html" ignoreCase="true" />
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
         </rule>
@@ -48,6 +56,10 @@
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page11" enabled="true" stopProcessing="true">
+          <match url="BarcodeScanner/methods/?ver=latest" ignoreCase="true" />
+          <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
+        </rule>
+        <rule name="Redirect-old-page11_1" enabled="true" stopProcessing="true">
           <match url="BarcodeScanner/methods/index.html" ignoreCase="true" />
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
         </rule>
@@ -68,6 +80,10 @@
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page16" enabled="true" stopProcessing="true">
+          <match url="BarcodeScanner/?ver=latest" ignoreCase="true" />
+          <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
+        </rule>
+        <rule name="Redirect-old-page16_1" enabled="true" stopProcessing="true">
           <match url="BarcodeScanner/index.html" ignoreCase="true" />
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
         </rule>
