update redirect rules

--- a/Web.Config
+++ b/Web.Config
@@ -12,7 +12,7 @@
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page2" enabled="true" stopProcessing="true">
-          <match url="BarcodeReader/methods/?ver=latest" ignoreCase="true" />
+          <match url="BarcodeReader/methods/$" ignoreCase="true" />
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page2_1" enabled="true" stopProcessing="true">
@@ -36,7 +36,7 @@
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page7" enabled="true" stopProcessing="true">
-          <match url="BarcodeReader/?ver=latest" ignoreCase="true" />
+          <match url="BarcodeReader/$" ignoreCase="true" />
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeReader.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page7_1" enabled="true" stopProcessing="true">
@@ -56,7 +56,7 @@
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page11" enabled="true" stopProcessing="true">
-          <match url="BarcodeScanner/methods/?ver=latest" ignoreCase="true" />
+          <match url="BarcodeScanner/methods/$" ignoreCase="true" />
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page11_1" enabled="true" stopProcessing="true">
@@ -80,7 +80,7 @@
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page16" enabled="true" stopProcessing="true">
-          <match url="BarcodeScanner/?ver=latest" ignoreCase="true" />
+          <match url="BarcodeScanner/$" ignoreCase="true" />
           <action type="Redirect" url="https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/BarcodeScanner.html" redirectType="Permanent" />
         </rule>
         <rule name="Redirect-old-page16_1" enabled="true" stopProcessing="true">
