--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ repositoryUrlJS: https://github.com/dynamsoft-docs/barcode-reader-docs-js/blob/m
 repository: dynamsoft-docs/barcode-reader-docs-js
 docFullPath: https://www.dynamsoft.com/barcode-reader/docs/web/
 firstLevelUrl: /barcode-reader/docs/web
-docRootName: "Barcode Reader JS Edition" 
-docHomePage: "/barcode-reader/docs/web/programming/javascript/"
+docRootName: "Barcode Reader JS Edition"
+docHomePage: /barcode-reader/docs/web/programming/javascript/
 
 useVersionTree: true
 
