--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,18 +28,27 @@ jobs:
           cd /home/ubuntu 
           [ -d DBRDocJS ] && rm -rf DBRDocJS 
           [ -d barcode-reader-docs-js ] && rm -rf barcode-reader-docs-js
-          [ -d Docs-Template-Repo-Preview-DCV2 ] && rm -rf Docs-Template-Repo-Preview-DCV2
+          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
       # Runs a set of commands using the runners shell
       - name: Build the site - Main
         run: |
           cd /home/ubuntu
           mkdir -p DBRDocJS
-          [ ! -d barcode-reader-docs-js ] && git clone --depth 1 https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js
-          [ ! -d Docs-Template-Repo-Preview-DCV2 ] && git clone --depth 1 --branch jenny-preview-branch https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview-DCV2
-          cd barcode-reader-docs-js && git pull && cd .. && cp -rfp ./barcode-reader-docs-js/* ./DBRDocJS/
-          cd Docs-Template-Repo-Preview-DCV2 && git pull && cd .. && cp -rfp ./Docs-Template-Repo-Preview-DCV2/* ./DBRDocJS/
+          git clone --depth 1 https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js
+          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
+          cp -rfp ./barcode-reader-docs-js/* ./DBRDocJS/
+          cp -rfp ./Docs-Template-Repo-Preview/* ./DBRDocJS/
           cd DBRDocJS && bundle exec jekyll build --incremental
-          python3 /home/ubuntu/ftp.py /home/ubuntu/DBRDocJS/_site/ ./www.dynamsoft.com/barcode-reader/docs/web/ prod
+
+      - name: Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+        with:
+          server: ${{ secrets.FTP_DYNAMSOFT_LOCAL_SERVER }}
+          username: ${{ secrets.FTP_DYNAMSOFT_LOCAL_USER }}
+          password: ${{ secrets.FTP_DYNAMSOFT_LOCAL_PASSWORD }}
+          port: 21 
+          local-dir: /home/ubuntu/DBRDocJS/_site/
+          server-dir: /www.dynamsoft.com/barcode-reader/docs/web/        
 
   Build-Preview:
     if: ${{ github.ref == 'refs/heads/preview' }}
@@ -53,16 +62,16 @@ jobs:
           cd /home/ubuntu 
           [ -d DBRDocJS-preview ] && rm -rf DBRDocJS-preview 
           [ -d barcode-reader-docs-js-preview ] && rm -rf barcode-reader-docs-js-preview
-          [ -d Docs-Template-Repo-Preview-DCV2 ] && rm -rf Docs-Template-Repo-Preview-DCV2
+          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
       # Runs a set of commands using the runners shell
       - name: Build the site - Preview
         run: |
           cd /home/ubuntu
           mkdir -p DBRDocJS-preview
-          [ ! -d barcode-reader-docs-js-preview ] && git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js-preview
-          [ ! -d Docs-Template-Repo-Preview-DCV2 ] && git clone --depth 1 --branch jenny-preview-branch https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview-DCV2
-          cd barcode-reader-docs-js-preview && git pull && cd .. && cp -rfp ./barcode-reader-docs-js-preview/* ./DBRDocJS-preview/
-          cd Docs-Template-Repo-Preview-DCV2 && git pull && cd .. && cp -rfp ./Docs-Template-Repo-Preview-DCV2/* ./DBRDocJS-preview/
+          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js-preview
+          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
+          cp -rfp ./barcode-reader-docs-js-preview/* ./DBRDocJS-preview/
+          cp -rfp ./Docs-Template-Repo-Preview/* ./DBRDocJS-preview/
           sed -i -e "1,3s/blob\/master$/blob\/preview/" \
           -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS-preview/_config.yml
           cd DBRDocJS-preview && bundle exec jekyll build --incremental
