--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
           cp -rfp ./barcode-reader-docs-js/* ./DBRDocJS/
           cp -rfp ./Docs-Template-Repo-Preview/* ./DBRDocJS/
-          cd DBRDocJS && bundle exec jekyll build --incremental
+          cd DBRDocJS && bundle install && bundle exec jekyll build
 
       - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
@@ -79,7 +79,7 @@ jobs:
           cp -rfp ./Docs-Template-Repo-Preview/* ./DBRDocJS-preview/
           sed -i -e "1,3s/blob\/master$/blob\/preview/" \
           -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS-preview/_config.yml
-          cd DBRDocJS-preview && bundle exec jekyll build --incremental
+          cd DBRDocJS-preview && bundle install && bundle exec jekyll build
 
       - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@4.3.0
