--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,12 @@ dnt_icon: /barcode-reader/docs/web/assets/img-icon/icon-dnt.svg
 baseurl: "/barcode-reader/docs/web"
 plugins:
   - jemoji
-
+  - jekyll-webp
+  - jekyll-relative-links
+  - jekyll-redirect-from
+  - jekyll-readme-index
+  - jekyll-seo-tag
+  
 edition: js
 
 defaults:
