--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -1,6 +1,8 @@
 tree_file_list:
   - sidelist-full-tree.html
   - sidelist-programming/programming-javascript.html
+  - sidelist-programming/programming-javascript-v9.6.30.html
+  - sidelist-programming/programming-javascript-v9.6.11.html  
   - sidelist-programming/programming-javascript-v9.0.2.html
   - sidelist-programming/programming-javascript-v8.8.7.html
   - sidelist-programming/programming-javascript-v8.8.5.html
