--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,75 +18,17 @@ jobs:
   # This workflow contains jobs called "Build-Main" and "Build-Preview"
   Build-Main:
     if: ${{ github.ref == 'refs/heads/main' }}
-    # The type of runner that the job will run on
-    runs-on: self-hosted
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - name: clear space
-        run: |
-          cd /home/ubuntu 
-          [ -d DBRDocJS ] && rm -rf DBRDocJS 
-          [ -d barcode-reader-docs-js ] && rm -rf barcode-reader-docs-js
-          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
-      # Runs a set of commands using the runners shell
-      - name: Build the site - Main
-        run: |
-          cd /home/ubuntu
-          mkdir -p DBRDocJS
-          git clone --depth 1 https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js
-          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
-          cp -rfp ./barcode-reader-docs-js/* ./DBRDocJS/
-          cp -rfp ./Docs-Template-Repo-Preview/* ./DBRDocJS/
-          cd DBRDocJS && bundle install && bundle exec jekyll build
-
-      - name: Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
-        with:
-          server: ${{ secrets.FTP_DYNAMSOFT_LOCAL_SERVER }}
-          username: ${{ secrets.FTP_DYNAMSOFT_LOCAL_USER }}
-          password: ${{ secrets.FTP_DYNAMSOFT_LOCAL_PASSWORD }}
-          port: 21 
-          local-dir: /home/ubuntu/DBRDocJS/_site/
-          server-dir: /www.dynamsoft.com/barcode-reader/docs/web/        
-
-      - name: Trigger Webhook 
-        run: | 
-          curl -X POST -H "${{ secrets.WEBHOOK_USER }}" -H "${{ secrets.WEBHOOK_TOKEN }}" -H "Content-Type: application/json" -d "[\"/barcode-reader/docs/web/*\"]" ${{ secrets.WEBHOOK_URL }}
-
+    uses: dynamsoft-docs/Docs-Template-Repo/.github/workflows/called-workflow-build-sync-production.yml@main
+    with:
+      doc-repo: barcode-reader-docs-js
+      doc-url: barcode-reader/docs/web
+    secrets: inherit
 
   Build-Preview:
     if: ${{ github.ref == 'refs/heads/preview' }}
-    # The type of runner that the job will run on
-    runs-on: self-hosted
+    uses: dynamsoft-docs/Docs-Template-Repo/.github/workflows/called-workflow-build-sync-testing.yml@preview
+    with:
+      doc-repo: barcode-reader-docs-js
+      doc-url: barcode-reader/docs/web
+    secrets: inherit
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - name: clear space
-        run: |
-          cd /home/ubuntu 
-          [ -d DBRDocJS-preview ] && rm -rf DBRDocJS-preview 
-          [ -d barcode-reader-docs-js-preview ] && rm -rf barcode-reader-docs-js-preview
-          [ -d Docs-Template-Repo-Preview ] && rm -rf Docs-Template-Repo-Preview
-      # Runs a set of commands using the runners shell
-      - name: Build the site - Preview
-        run: |
-          cd /home/ubuntu
-          mkdir -p DBRDocJS-preview
-          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/barcode-reader-docs-js.git barcode-reader-docs-js-preview
-          git clone --depth 1 --branch preview https://github.com/dynamsoft-docs/Docs-Template-Repo.git Docs-Template-Repo-Preview
-          cp -rfp ./barcode-reader-docs-js-preview/* ./DBRDocJS-preview/
-          cp -rfp ./Docs-Template-Repo-Preview/* ./DBRDocJS-preview/
-          sed -i -e "1,3s/blob\/master$/blob\/preview/" \
-          -e "1,3s/blob\/main$/blob\/preview/" /home/ubuntu/DBRDocJS-preview/_config.yml
-          cd DBRDocJS-preview && bundle install && bundle exec jekyll build
-
-      - name: Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
-        with:
-          server: ${{ secrets.FTP_TEST_SITE_SERVER }}
-          username: ${{ secrets.FTP_TEST_SITE_USER }}
-          password: ${{ secrets.FTP_TEST_SITE_PASSWORD }}
-          port: 7500 
-          local-dir: /home/ubuntu/DBRDocJS-preview/_site/
-          server-dir: /www.dynamsoft.com/barcode-reader/docs/web/        
