--- a/_data/product_version.yml
+++ b/_data/product_version.yml
@@ -2,9 +2,9 @@ useGroupedVersion: true
 
 version_info_list_js:
   - value: latest version
-    # - value: 10.x
-    #   child:
-    #   - 10.0.12
+  - value: 10.x
+    child:
+      - 10.0.20
   - value: 9.x
     child:
       - 9.6.31
