--- a/_data/product_version.yml
+++ b/_data/product_version.yml
@@ -1,13 +1,13 @@
 useGroupedVersion: true
 
 version_info_list_js:
-  - value: latest version
+  - value: latest version(10.0.21)
   - value: 10.x
     child:
-      - 10.0.21(latest)
       - 10.0.20
   - value: 9.x
     child:
+      - 9.6.40
       - 9.6.33
       - 9.6.32
       - 9.6.31
