--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -1,6 +1,7 @@
 tree_file_list:
   - sidelist-full-tree.html
   - sidelist-programming/programming-javascript.html
+  - sidelist-programming/programming-javascript-v10.0.21.html
   - sidelist-programming/programming-javascript-v9.6.40.html
   - sidelist-programming/programming-javascript-v9.6.11.html  
   - sidelist-programming/programming-javascript-v9.0.2.html
