--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ js_api: /barcode-reader/docs/web/programming/javascript/api-reference/
 dcv_js_api: /capture-vision/docs/web/programming/javascript/api-reference/
 js_release_notes: /barcode-reader/docs/web/programming/javascript/release-notes/
 enums: /capture-vision/docs/core/enums/
+dce_js_api: /camera-enhancer/docs/web/programming/javascript/api-reference/
 
 parameters_reference: /barcode-reader/docs/core/parameters/reference/
 image_parameters: /barcode-reader/docs/core/parameters/reference/image-parameter/
