update to internal commit 339357d3

--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,10 @@ edition: js
 
 defaults:
   - scope:
+      path: "programming-old"
+    values:
+      ignore: true
+  - scope:
       path: ""
     values:
       category: "original-repo"
