update to internal commit f1b4c734

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ docFullPath: https://www.dynamsoft.com/barcode-reader/docs/web/
 firstLevelUrl: /barcode-reader/docs/web
 docRootName: "Barcode Reader JS Edition"
 docHomePage: /barcode-reader/docs/web/programming/javascript/
+searchIndexName: Crawler-DBR-Docs-New
+searchNeedFilter: true
 
 useVersionTree: true
 
