--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -6,6 +6,7 @@ tree_file_list:
   - sidelist-programming/sidelist-parameter-reference.html
   - sidelist-programming/sidelist-understanding.html
   - sidelist-programming/programming-javascript.html
+  - sidelist-programming/programming-javascript-v10.4.3100.html
   - sidelist-programming/programming-javascript-v10.2.1000.html
   - sidelist-programming/programming-javascript-v10.0.21.html
   - sidelist-programming/programming-javascript-v9.6.42.html
