--- a/_data/full_tree.yml
+++ b/_data/full_tree.yml
@@ -1,13 +1,17 @@
 tree_file_list:
   - sidelist-full-tree.html
   - sidelist-programming/sidelist-architecture.html
+  - sidelist-programming/sidelist-architecture-v10.5.3000.html
   - sidelist-programming/sidelist-performance.html
   - sidelist-programming/sidelist-parameters-organization.html
   - sidelist-programming/sidelist-parameter-reference.html
   - sidelist-programming/sidelist-parameters.html
+  - sidelist-programming/sidelist-parameters-v10.5.3000.html
   - sidelist-programming/sidelist-understanding.html
   - sidelist-programming/sidelist-understanding-v10.4.3100.html
+  - sidelist-programming/sidelist-understanding-v10.5.3000.html
   - sidelist-programming/programming-javascript.html
+  - sidelist-programming/programming-javascript-v10.5.3000.html
   - sidelist-programming/programming-javascript-v10.4.3100.html
   - sidelist-programming/programming-javascript-v10.2.1000.html
   - sidelist-programming/programming-javascript-v10.0.21.html
